--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
-		"@mantine/core": "^6.0.17",
-		"@mantine/form": "^6.0.17",
-		"@mantine/hooks": "^6.0.17",
-		"@mantine/modals": "^6.0.17",
-		"@mantine/notifications": "^6.0.17",
+		"@mantine/core": "^6.0.19",
+		"@mantine/form": "^6.0.19",
+		"@mantine/hooks": "^6.0.19",
+		"@mantine/modals": "^6.0.19",
+		"@mantine/notifications": "^6.0.19",
+		"@mantine/nprogress": "^6.0.19",
+		"@mantine/tiptap": "^6.0.19",
 		"@react-icons/all-files": "^4.1.0",
-		"@tabler/icons-react": "^2.30.0",
+		"@tabler/icons-react": "^2.31.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@tiptap/extension-link": "^2.1.6",
+		"@tiptap/react": "^2.1.6",
+		"@tiptap/starter-kit": "^2.1.6",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.39",
 		"@types/react": "^18.2.16",
@@ -33,7 +38,7 @@
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.3",
 		"recharts": "^2.7.2",
-		"sass": "^1.64.1",
+		"sass": "^1.66.1",
 		"store": "^2.0.12",
 		"store2": "^2.14.2",
 		"typescript": "^4.9.5",
