--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "metsenat-main",
+	"name": "eduon",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -36,7 +36,6 @@
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
-		"react-toastify": "^9.1.3",
 		"recharts": "^2.7.2",
 		"sass": "^1.66.1",
 		"store": "^2.0.12",
