--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
 		"dayjs": "^1.11.9",
 		"lodash": "^4.17.21",
 		"mantine-datatable": "^2.9.6",
+		"polished": "^4.2.2",
 		"react": "^18.2.0",
 		"react-currency-input-field": "^3.6.11",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.10.1",
+		"react-icons": "^4.11.0",
 		"react-imask": "^7.1.3",
 		"react-multi-carousel": "^2.8.4",
 		"react-query": "^3.39.3",
