--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"sass": "^1.66.1",
 		"store": "^2.0.12",
 		"store2": "^2.14.2",
+		"styled-components": "^6.0.7",
 		"typescript": "^4.9.5",
 		"use-query-params": "^2.2.1",
 		"web-vitals": "^2.1.4",
