--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-   "cSpell.words": ["Menejment", "Moliya"]
+   "cSpell.words": ["kurslarim", "Ma’lumotlar", "malumotla", "Menejment", "Moliya", "profil"]
 }
