--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-imask": "^7.1.3",
 		"react-multi-carousel": "^2.8.4",
 		"react-query": "^3.39.3",
+		"react-quill": "^2.0.0",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.3",
