--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"axios": "^1.4.0",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.9",
+		"dompurify": "^3.0.6",
+		"isomorphic-dompurify": "^1.9.0",
+		"jsdom": "^22.1.0",
 		"lodash": "^4.17.21",
 		"mantine-datatable": "^2.9.6",
 		"polished": "^4.2.2",
