--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react-imask": "^7.1.3",
 		"react-mask": "^1.0.0",
 		"react-multi-carousel": "^2.8.4",
+		"react-phone-input-2": "^2.15.1",
 		"react-query": "^3.39.3",
 		"react-quill": "^2.0.0",
 		"react-router-dom": "^6.14.2",
